# fomu.cli

./: .gitignore  Cargo.toml  README.md  pyproject.toml
fomu/: __init__.py  __main__.py  cli.py  config.py
fomu/engine/: __init__.py  analyzer.py  player.py
fomu/presets/: __init__.py  presets.py
fomu/tracks/: __init__.py  catalog.py  downloader.py  loader.py
fomu/visualization/: __init__.py  bars.py  base.py  minimal.py  wave.py
src/: app.rs  main.rs  presets.rs
src/audio/: analyzer.rs  decoder.rs  mod.rs  player.rs
src/tracks/: catalog.rs  downloader.rs  loader.rs  mod.rs
src/ui/: mod.rs  render.rs  visualizers.rs
tests/: __init__.py  conftest.py  test_analyzer.py  test_presets.py
