[package]
name = "fomu"
version = "0.1.0"
edition = "2021"
description = "CLI ambient music player for focus"
authors = ["Fujitech"]
license = "MIT"

[dependencies]
# Audio
cpal = "0.15"
symphonia = { version = "0.5", features = ["mp3"] }
ringbuf = "0.4"
rustfft = "6.2"

# Terminal UI
ratatui = "0.28"
crossterm = "0.28"

# CLI & utilities
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking"] }
directories = "5.0"
rand = "0.8"
anyhow = "1.0"

[profile.release]
lto = true
codegen-units = 1
