[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fomu"
version = "0.1.0"
description = "CLI ambient music player for focus"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Fomu Team" }
]
keywords = ["music", "focus", "ambient", "cli", "productivity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "sounddevice>=0.4",
    "soundfile>=0.12",
    "numpy>=1.24",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
fomu = "fomu.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
